--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,12 @@ h3 {
   margin-bottom: 1em;
 }
 
+.section__subtitle--work {
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+  margin-bottom: 2em;
+}
+
 /* header */
 
 nav {
@@ -325,4 +331,43 @@ nav {
     padding-right: calc(200px + 4em);
     grid-area: subtitle;
   }
+}
+
+/* My work */
+
+.my-work {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  text-align: center;
+}
+
+.portfolio {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  /* grid-template-columns: repeat(2, 1fr); */
+  gap: 10px;
+}
+
+.portfolio__item {
+  background: var(--clr-accent);
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.portfolio__img {
+  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.portfolio__item:focus {
+  position: relative;
+  z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+  transform: scale(1.2);
+  opacity: 0.5;
 }
