--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@
 
 /* General styles */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
@@ -134,10 +138,54 @@ h3 {
   margin-bottom: 2em;
 }
 
+.color-primary {
+  color: var(--clr-accent);
+}
+
 /* header */
 
-nav {
-  display: none;
+header {
+  display: flex;
+  padding: 0em 1em;
+  background-color: #303030;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  /* max-width: 100px; */
+  display: flex;
+  align-items: center;
+}
+
+.navbar {
+  overflow: hidden;
+}
+
+.navbar li {
+  display: inline;
+}
+.nav__link {
+  color: white;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-h3);
+  text-decoration: none;
+  padding: 0 1em;
+  text-align: center;
+}
+
+.nav__link:hover,
+.active {
+  color: var(--clr-accent);
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    display: none;
+  }
 }
 
 /*  Intro section  */
@@ -195,7 +243,20 @@ nav {
     grid-column-gap: 1em;
     margin-top: 1em;
   }
-}
+} /* .navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+} */
+
+/* .navbar ul {
+  margin: 8px 0 0 0;
+  list-style: none;
+} */
 
 /*  About me section  */
 
@@ -345,20 +406,20 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   /* grid-template-columns: repeat(2, 1fr); */
-  gap: 10px;
+  gap: 20px;
 }
 
 .portfolio__item {
   background: var(--clr-accent);
   overflow: hidden;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .portfolio__img {
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .portfolio__item:focus {
@@ -370,4 +431,52 @@ nav {
 .portfolio__item:focus .portfolio__img {
   transform: scale(1.2);
   opacity: 0.5;
+}
+
+/* footer */
+
+.footer {
+  background: #111;
+  color: var(--clr-accent);
+  text-align: center;
+  padding: 2.5em 0;
+  font-size: var(--fs-h3);
+}
+
+.footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer__link {
+  font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+  opacity: 0.7;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  /* margin: 2em 0 0; */
+  padding: 0;
+}
+
+.social-list__item {
+  margin: 0 0.5em;
+}
+
+.social-list__link {
+  padding: 0.5em;
+}
+
+.footer__msg {
+  font-weight: 900;
 }
