--- a/css/styles.css
+++ b/css/styles.css
@@ -151,74 +151,111 @@ h3 {
   color: var(--clr-accent);
 }
 
-/* header */
+/* navbar */
 
-header {
+.navbar {
   display: flex;
-  padding: 0em 1em;
-  background-color: #444;
   position: sticky;
-  top: 0;
-  z-index: 1000;
   justify-content: space-between;
   align-items: center;
-  height: 65px;
+  background-color: #444;
+  color: white;
+  top: 0;
+  z-index: 1000;
 }
 
 .logo {
-  /* max-width: 100px; */
-  display: flex;
-  align-items: center;
+  font-size: 1.5rem;
+  margin: 0.5rem;
 }
 
-.nav ul {
-  list-style: none;
+.navbar-links {
+  height: 100%;
+}
+
+.navbar-links ul {
+  display: flex;
   margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
+  padding: 1rem;
 }
 
-.nav li {
-  display: flex;
-  float: left;
-  height: 65px;
-  width: 120px; /*new*/
-  text-align: center; /*new*/
-  align-items: center;
-  justify-content: center;
+.navbar-links li {
+  list-style: none;
 }
 
-.nav li a {
-  color: #eee;
-  font-size: var(--fs-h3);
-  text-decoration: none;
+.navbar-links li a {
   display: block;
-  padding: 15px;
+  text-decoration: none;
+  color: white;
+  padding: 0 2rem;
 }
 
-.nav li span {
-  padding: 15px 0;
+.navbar-links a i {
+  font-size: 20px;
+}
+
+.navbar-links li span {
   display: none;
 }
-.nav a:hover {
+.navbar-links a:hover {
   color: #fff;
 }
-.nav a:hover > i {
+.navbar-links a:hover > i {
   display: none;
 }
-.nav a:hover > span {
+.navbar-links a:hover > span {
   display: block;
 }
 
-/* .nav {
-  overflow: hidden;
-} */
+.nav-toggle {
+  position: absolute;
+  top: 1.3rem;
+  right: 1rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+  display: none;
+}
+
+.nav-toggle .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
 
 @media (max-width: 800px) {
-  .nav {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-toggle {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .navbar-links {
     display: none;
+    width: 100%;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .navbar-links ul li {
+    text-align: center;
+  }
+
+  .navbar-links ul li a {
+    padding: 0.5rem 1rem;
+  }
+
+  .navbar-links.active {
+    display: flex;
   }
 }
 
@@ -1102,4 +1139,5 @@ header {
 
 .footer__msg {
   font-weight: 900;
+  padding: 0 0.5em;
 }
