--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,8 @@ h3 {
 }
 
 .navbar-links {
-  height: 100%;
+  height: 0;
+  transition: height 300ms linear;
 }
 
 .navbar-links ul {
@@ -257,7 +258,7 @@ h3 {
   }
 
   .navbar-links ul li a {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem 0.5rem 0;
   }
 
   .navbar-links.active {
