--- a/css/styles.css
+++ b/css/styles.css
@@ -176,8 +176,7 @@ h3 {
 }
 
 .navbar-links {
-  height: 0;
-  transition: height 300ms linear;
+  height: 100%;
 }
 
 .navbar-links ul {
@@ -258,7 +257,7 @@ h3 {
   }
 
   .navbar-links ul li a {
-    padding: 0.5rem 0.5rem 0.5rem 0;
+    padding: 0.5rem;
   }
 
   .navbar-links.active {
